fiexed alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,7 +936,8 @@ section {
   float: left;
   color: #f6b024;
   font-size: 40px;
-  line-height: 3;
+  line-height: 0;
+  margin-top: -5px;
 }
 .services .icon-box h4 {
   margin-left: 70px;
@@ -2144,6 +2145,17 @@ section {
 .navbar #apply_link{
   width: 35%;
 }
+
+.services .icon-box p {
+  margin-left: 0px !important;
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+#about_pmuday .content{
+  padding: 0 8px !important;
+}
   
 }
 
@@ -2153,4 +2165,51 @@ section {
 }
 .contact-info span{
   font-weight: 600;
+}
+
+#appli_button{
+  background-color: #f6b024;
+  border: none;
+  background-color: #f6b024;
+  border: none;
+  color: white;
+  padding: 7px 35px;
+  border-radius: 50px;
+}
+#appli_button:hover{
+  background-color: #f3b63cda;
+  color: white;
+  transition: all 0.3s;
+}
+.bg-warnings{
+  background-color: #f6b024 !important;
+}
+.bounce{
+  animation: bounce 2s infinite;
+	-webkit-animation: bounce 2s infinite;
+	-moz-animation: bounce 2s infinite;
+	-o-animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+	40% {-webkit-transform: translateY(-30px);}
+	60% {-webkit-transform: translateY(-15px);}
+}
+ 
+@-moz-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+	40% {-moz-transform: translateY(-30px);}
+	60% {-moz-transform: translateY(-15px);}
+}
+ 
+@-o-keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+	40% {-o-transform: translateY(-30px);}
+	60% {-o-transform: translateY(-15px);}
+}
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+	40% {transform: translateY(-30px);}
+	60% {transform: translateY(-15px);}
 }
